TaintTolerence.yml
apiVersion: v1
kind: Pod
metadata:
- name: po1
spec:
 nodeSelector:
  app: db
 tolerations:
  - key: "app"
    operator: "Equal"
    value: "db"
    effect: "NoSchedule"
 containers:
  - name: tej
    image: nginx
    ports:
      - containerPort: 80
