po.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
    - name: pod1
      image: httpd
      ports:
        - containerPort: 80
