loadbalencer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: serv3
spec:
  type: LoadBalancer
  selector:
    devops: ai
  ports:
    - port: 80
      targetPort: 3000
