nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: serv1
spec:
  type: NodePort
  selector:
    devops: ai
  ports:
      - port: 80
        targetPort: 80
