ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: cluster1
                port:
                  number: 80
